Added non-recursive responses